--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test:ci": "yarn prisma generate && yarn jest --reporters=jest-junit",
     "test:changed": "yarn jest --onlyChanged",
     "stripe:listen-webhook": "stripe listen --forward-to localhost:5010/api/v1/stripe/webhook",
-    "format": "nx format affected",
+    "format": "nx format",
     "migrate": "yarn prisma migrate deploy",
     "generate-schema": "yarn prisma generate && yarn format",
     "seed": "yarn prisma db seed",
@@ -28,15 +28,15 @@
     "@golevelup/nestjs-stripe": "0.3.4",
     "@golevelup/nestjs-webhooks": "0.2.14",
     "@keycloak/keycloak-admin-client": "18.0.0",
-    "@nestjs/axios": "0.1.0",
-    "@nestjs/cli": "9.1.4",
-    "@nestjs/common": "9.1.4",
-    "@nestjs/config": "2.2.0",
-    "@nestjs/core": "9.1.4",
-    "@nestjs/jwt": "9.0.0",
-    "@nestjs/platform-express": "9.1.4",
-    "@nestjs/swagger": "6.1.2",
-    "@nestjs/terminus": "9.1.2",
+    "@nestjs/axios": "^1.0.1",
+    "@nestjs/cli": "^9.1.8",
+    "@nestjs/common": "^9.2.1",
+    "@nestjs/config": "^2.2.0",
+    "@nestjs/core": "^9.2.1",
+    "@nestjs/jwt": "^10.0.1",
+    "@nestjs/platform-express": "^9.2.1",
+    "@nestjs/swagger": "^6.1.4",
+    "@nestjs/terminus": "^9.1.4",
     "@ntegral/nestjs-sentry": "4.0.0",
     "@prisma/client": "4.3.1",
     "@sendgrid/client": "7.6.2",
@@ -57,22 +57,21 @@
     "reflect-metadata": "0.1.13",
     "rxjs": "7.5.5",
     "stripe": "9.16.0",
-    "supertest": "6.2.4",
     "swagger-ui-express": "4.5.0",
     "tslib": "2.4.0"
   },
   "devDependencies": {
     "@faker-js/faker": "7.6.0",
-    "@nestjs/schematics": "9.0.3",
-    "@nestjs/testing": "9.2.1",
-    "@nrwl/cli": "15.0.4",
-    "@nrwl/eslint-plugin-nx": "15.0.4",
-    "@nrwl/jest": "15.0.4",
-    "@nrwl/linter": "15.0.4",
-    "@nrwl/nest": "15.0.4",
-    "@nrwl/node": "15.0.4",
-    "@nrwl/tao": "15.0.4",
-    "@nrwl/workspace": "15.0.4",
+    "@nestjs/schematics": "^9.0.4",
+    "@nestjs/testing": "^9.2.1",
+    "@nrwl/cli": "^15.5.1",
+    "@nrwl/eslint-plugin-nx": "^15.5.1",
+    "@nrwl/jest": "^15.5.1",
+    "@nrwl/linter": "^15.5.1",
+    "@nrwl/nest": "^15.5.1",
+    "@nrwl/node": "^15.5.1",
+    "@nrwl/tao": "^15.5.1",
+    "@nrwl/workspace": "^15.5.1",
     "@types/express": "4.17.13",
     "@types/faker": "5.5.9",
     "@types/jest": "29.2.3",
@@ -80,25 +79,26 @@
     "@types/mjml": "4.7.0",
     "@types/multer": "1.4.7",
     "@types/node": "16.9.1",
-    "@typescript-eslint/eslint-plugin": "5.10.2",
-    "@typescript-eslint/parser": "5.10.2",
+    "@typescript-eslint/eslint-plugin": "^5.48.1",
+    "@typescript-eslint/parser": "^5.48.1",
     "@vegardit/prisma-generator-nestjs-dto": "1.5.1",
     "eslint": "8.7.0",
     "eslint-config-prettier": "8.3.0",
     "fishery": "2.2.2",
     "husky": "7.0.2",
-    "jest": "29.2.2",
-    "jest-extended": "3.2.0",
-    "jest-junit": "15.0.0",
-    "jest-mock-extended": "3.0.1",
+    "jest": "^29.3.1",
+    "jest-extended": "^3.2.3",
+    "jest-junit": "^15.0.0",
+    "jest-mock-extended": "^3.0.1",
     "lint-staged": "11.1.2",
-    "nx": "15.0.4",
+    "nx": "^15.5.1",
     "prettier": "2.6.0",
     "prisma": "4.3.1",
     "prisma-dbml-generator": "0.9.1",
-    "ts-jest": "29.0.3",
-    "ts-node": "10.2.1",
-    "typescript": "4.8.3"
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.0.5",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
   },
   "prisma": {
     "seed": "ts-node db/seed/index.ts"
