Integrate the Cache-manager to cache the most common APIs (#511)
* Add a hotcache class that we can use to cache the most common requests.
We are using this to cache some of the most used apis - like the statistics.
This should reduce the CPU load in case of too many hits.

* Add a configuration option for the hotcache ttl.
We also have an option to disable it if there is a problem.

* Rename hotcache get and set methods. Those are reserved keywords and it is not a good idea to use them.

* Change the javascript object with a Map class - it is safer to use it.
We are storing key that can come from user inputs, so it can be a security issue otherwise.

* Integrate the nest.js cache manager and replace the homemade hotcache class. It makes the code cleaner as it caches the APIs directly.

* Change the configuration to use CACHE_TTL option instead of HOTCACHE_TTL.

* Remove a hotcache configuration. We do read this directly from the .env file.

* Increase the default cache time to 60sec.

* Fix the package.json cache manager import.

* Import cache manager to the tests and import both of the cache-manager packages.

* Import cache-manager to the yarn.lock file

* Remove some non-necessary cache-manager dependency options in the yarn.lock file in an attempt to fix the broken build message.

---------

Co-authored-by: igoychev <igoychev@gmail.com>

--- a/.env.example
+++ b/.env.example
@@ -97,3 +97,7 @@ IMPORT_TRX_TASK_INTERVAL_MINUTES=60
 #which hour of the day to run the check for consent
 CHECK_IRIS_CONSENT_TASK_HOUR=10
 BILLING_ADMIN_MAIL=billing_admin@podkrepi.bg
+
+## Cache ##
+##############
+CACHE_TTL=30000
