--- a/manifests/base/deployment.yaml
+++ b/manifests/base/deployment.yaml
@@ -224,3 +224,5 @@ spec:
                 secretKeyRef:
                   name: paypal-secret
                   key: webhook-id
+            - name: CACHE_TTL
+              value: '60000'
