--- a/.env
+++ b/.env
@@ -97,3 +97,7 @@ PLATFORM_IBAN=
 IMPORT_TRX_TASK_INTERVAL_MINUTES=60
 CHECK_IRIS_CONSENT_TASK_HOUR=10
 BILLING_ADMIN_MAIL=billing_admin@podkrepi.bg
+
+## Cache ##
+##############
+CACHE_TTL=60000
