--- a/package.json
+++ b/package.json
@@ -91,8 +91,8 @@
     "@typescript-eslint/eslint-plugin": "^5.48.1",
     "@typescript-eslint/parser": "^5.48.1",
     "@vegardit/prisma-generator-nestjs-dto": "1.5.1",
-    "eslint": "8.7.0",
-    "eslint-config-prettier": "8.3.0",
+    "eslint": "^8.44.0",
+    "eslint-config-prettier": "^8.8.0",
     "fishery": "2.2.2",
     "husky": "7.0.2",
     "jest": "^29.3.1",
